--- a/Application/Application.ioc
+++ b/Application/Application.ioc
@@ -162,6 +162,7 @@ MxDb.Version=DB.6.0.70
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA2D_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.LTDC_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
@@ -178,7 +179,7 @@ NVIC.TimeBaseIP=TIM6
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0/WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA0/WKUP.GPIO_Label=B1 [Blue PushButton]
-PA0/WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
+PA0/WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PA0/WKUP.GPIO_PuPd=GPIO_NOPULL
 PA0/WKUP.Locked=true
 PA0/WKUP.Signal=GPXTI0
