update .ioc file for adding uart5 and change host uart to uart5

--- a/Application/Application.ioc
+++ b/Application/Application.ioc
@@ -42,9 +42,10 @@ Mcu.CPN=STM32F429ZIT6
 Mcu.Family=STM32F4
 Mcu.IP0=CRC
 Mcu.IP1=DMA2D
-Mcu.IP10=USART1
-Mcu.IP11=USB_HOST
-Mcu.IP12=USB_OTG_HS
+Mcu.IP10=UART5
+Mcu.IP11=USART1
+Mcu.IP12=USB_HOST
+Mcu.IP13=USB_OTG_HS
 Mcu.IP2=FMC
 Mcu.IP3=I2C3
 Mcu.IP4=LTDC
@@ -53,7 +54,7 @@ Mcu.IP6=RCC
 Mcu.IP7=SPI5
 Mcu.IP8=SYS
 Mcu.IP9=TIM1
-Mcu.IPNb=13
+Mcu.IPNb=14
 Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC14/OSC32_IN
@@ -130,30 +131,32 @@ Mcu.Pin72=PA13
 Mcu.Pin73=PA14
 Mcu.Pin74=PA15
 Mcu.Pin75=PC10
-Mcu.Pin76=PD0
-Mcu.Pin77=PD1
-Mcu.Pin78=PD3
-Mcu.Pin79=PD6
+Mcu.Pin76=PC12
+Mcu.Pin77=PD0
+Mcu.Pin78=PD1
+Mcu.Pin79=PD2
 Mcu.Pin8=PF7
-Mcu.Pin80=PG10
-Mcu.Pin81=PG11
-Mcu.Pin82=PG12
-Mcu.Pin83=PG13
-Mcu.Pin84=PG14
-Mcu.Pin85=PG15
-Mcu.Pin86=PB5
-Mcu.Pin87=PB6
-Mcu.Pin88=PB8
-Mcu.Pin89=PB9
+Mcu.Pin80=PD3
+Mcu.Pin81=PD6
+Mcu.Pin82=PG10
+Mcu.Pin83=PG11
+Mcu.Pin84=PG12
+Mcu.Pin85=PG13
+Mcu.Pin86=PG14
+Mcu.Pin87=PG15
+Mcu.Pin88=PB5
+Mcu.Pin89=PB6
 Mcu.Pin9=PF8
-Mcu.Pin90=PE0
-Mcu.Pin91=PE1
-Mcu.Pin92=VP_CRC_VS_CRC
-Mcu.Pin93=VP_DMA2D_VS_DMA2D
-Mcu.Pin94=VP_SYS_VS_tim6
-Mcu.Pin95=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin96=VP_USB_HOST_VS_USB_HOST_CDC_HS
-Mcu.PinsNb=97
+Mcu.Pin90=PB8
+Mcu.Pin91=PB9
+Mcu.Pin92=PE0
+Mcu.Pin93=PE1
+Mcu.Pin94=VP_CRC_VS_CRC
+Mcu.Pin95=VP_DMA2D_VS_DMA2D
+Mcu.Pin96=VP_SYS_VS_tim6
+Mcu.Pin97=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin98=VP_USB_HOST_VS_USB_HOST_CDC_HS
+Mcu.PinsNb=99
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -398,6 +401,8 @@ PC10.GPIO_PuPd=GPIO_NOPULL
 PC10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC10.Locked=true
 PC10.Signal=LTDC_R2
+PC12.Mode=Asynchronous
+PC12.Signal=UART5_TX
 PC14/OSC32_IN.GPIOParameters=GPIO_Label
 PC14/OSC32_IN.GPIO_Label=PC14-OSC32_IN
 PC14/OSC32_IN.Locked=true
@@ -505,6 +510,8 @@ PD15.GPIO_PuPd=GPIO_NOPULL
 PD15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD15.Locked=true
 PD15.Signal=FMC_D1_DA1
+PD2.Mode=Asynchronous
+PD2.Signal=UART5_RX
 PD3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PD3.GPIO_Label=G7
 PD3.GPIO_Mode=GPIO_MODE_AF_PP
@@ -983,6 +990,8 @@ SPI5.Direction=SPI_DIRECTION_2LINES
 SPI5.IPParameters=Mode,CalculateBaudRate,VirtualType,Direction,BaudRatePrescaler
 SPI5.Mode=SPI_MODE_MASTER
 SPI5.VirtualType=VM_MASTER
+UART5.IPParameters=VirtualMode
+UART5.VirtualMode=Asynchronous
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USB_HOST.BSP.number=1
