--- a/Application/Application.ioc
+++ b/Application/Application.ioc
@@ -179,6 +179,7 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM6_DAC_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
 NVIC.TimeBase=TIM6_DAC_IRQn
 NVIC.TimeBaseIP=TIM6
+NVIC.UART5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0/WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA0/WKUP.GPIO_Label=B1 [Blue PushButton]
@@ -861,8 +862,8 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CRC_Init-CRC-false-HAL-true,4-MX_DMA2D_Init-DMA2D-false-HAL-true,5-MX_FMC_Init-FMC-false-HAL-true,6-MX_I2C3_Init-I2C3-false-HAL-true,7-MX_LTDC_Init-LTDC-false-HAL-true,8-MX_SPI5_Init-SPI5-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_USART1_UART_Init-USART1-false-HAL-true,11-MX_USB_HOST_Init-USB_HOST-false-HAL-false
-RCC.48MHZClocksFreq_Value=24000000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CRC_Init-CRC-false-HAL-true,4-MX_DMA2D_Init-DMA2D-false-HAL-true,5-MX_FMC_Init-FMC-false-HAL-true,6-MX_I2C3_Init-I2C3-false-HAL-true,7-MX_LTDC_Init-LTDC-false-HAL-true,8-MX_SPI5_Init-SPI5-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_USART1_UART_Init-USART1-false-HAL-true,11-MX_USB_HOST_Init-USB_HOST-false-HAL-false,12-MX_UART5_Init-UART5-false-HAL-true
+RCC.48MHZClocksFreq_Value=56000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=21000000
@@ -885,8 +886,8 @@ RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=84000000
 RCC.PLLCLKFreq_Value=84000000
 RCC.PLLN=336
-RCC.PLLQ=7
-RCC.PLLQCLKFreq_Value=24000000
+RCC.PLLQ=3
+RCC.PLLQCLKFreq_Value=56000000
 RCC.PLLSAIR=2
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
