--- a/Application/Application.ioc
+++ b/Application/Application.ioc
@@ -991,7 +991,8 @@ SPI5.Direction=SPI_DIRECTION_2LINES
 SPI5.IPParameters=Mode,CalculateBaudRate,VirtualType,Direction,BaudRatePrescaler
 SPI5.Mode=SPI_MODE_MASTER
 SPI5.VirtualType=VM_MASTER
-UART5.IPParameters=VirtualMode
+UART5.BaudRate=9600
+UART5.IPParameters=VirtualMode,BaudRate
 UART5.VirtualMode=Asynchronous
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
